# smvblock

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: cli.rs  http.rs  main.rs
docs/: client.md  smv-core.md
node/: Cargo.toml
node/src/: config.rs  db.rs  devnet.rs  main.rs  node.rs  p2p.rs
smv-core/: Cargo.toml
smv-core/src/: block.rs  blockchain.rs  crypto.rs  db.rs  interface.rs  lib.rs  state.rs  transaction.rs
smv-core/tests/: balance_check.rs  chain_growth.rs  serde_tests.rs  transaction_rejection.rs  transaction_replay.rs  transaction_validation.rs
src/: blockchain.rs  db.rs  lib.rs  main.rs  node.rs  p2p.rs
tests/: blockchain.rs  db.rs
