[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
smv-core = { path = "../smv-core" }
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
