[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["std"] }
serde_json = "1.0.140"
smv-core = { path = "../smv-core" }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }

# [mainnet]
# seed_nodes = [
#    "127.0.0.1:8001",
#    "127.0.0.1:8002", 
#    "127.0.0.1:8003"
# ]
