[package]
name = "smv-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
hex = "0.4.3"
rand = "^0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
rusqlite = { version = "0.36.0", features = ["bundled"] }
tokio = { version = "1.45.1", features = ["sync"] }
